# frappe

./: .babelrc  .codacy.yml  .coveragerc  .deepsource.html  .deepsource.toml  .editorconfig  .eslintignore  .eslintrc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .releaserc  .releaserc.json  .semgrep.yml  .snyk  .travis.yml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  INSTALL.md  INSTALL.txt  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  Procfile  README  README.md  SECURITY.md  attribution.md  attributions.md  babel.cfg  babel_extractors.csv  bandit.yml  build.json  change_log.txt  (+43 more)
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  semantic.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question-about-using-frappe.md
.github/frappe_linter/: translation.py
.github/helper/: ci.py  documentation.py  flake8.conf  install.sh  install_bench.sh  install_dependencies.sh  install_site.sh  mariadb.json  postgres.json  roulette.py  run_tests.sh  security_flags.yml  translation.py  update_pot_file.sh
.github/workflows/: backport.yml  check_translation_format.yml  ci-tests.yml  ci.yml  create-release.yml  deps-checker.yml  docker-release.yml  docs-checker.yml  downstream.yml  flake8.yml  generate-pot-file.yml  initiate_release.yml  labeller.yml  linters.yml  lock.yml  main.yml  mariadb-tests.yml  mysql-tests.yml  on_release.yml  patch-mariadb-tests.yml  pre-commit.yml  publish-assets-develop.yml  publish-assets-releases.yml  publish-assets.yml  python-app.yml  release.yml  release_notes.yml  run-indinvidual-tests.yml  semantic-commits.yml  semgrep.yml  server-mariadb-tests.yml  server-postgres-tests.yml  server-tests.yml  translation_linter.yml  types.yaml  ui-tests.yml
.travis/: install.py  install.sh  mariadb.json  postgres.json  roulette.py  run-tests.sh  site_config.json
.travis/consumer_db/: mariadb.json  postgres.json
.travis/producer_db/: mariadb.json  postgres.json
app/webnotes/: __init__.py  auth.py  defs_template.py  handler.py  profile.py  run_tests.py  session_cache.py
assets/css/: docs.css  font-awesome.css
assets/js/: docs.js
cgi-bin/: compilejs.py  getfile.cgi  getjsfile.cgi  pypi-setup.py
cgi-bin/core/: __init__.py  module.info
cgi-bin/webnotes/: __init__.py  auth.py  db.py  defs_template.py  handler.py  profile.py  run_tests.py  session_cache.py  tests.py
conf/: Framework.sql  _conf.py  apache.conf  app.js  build.json  conf.py  index.html  sitemap.xml
core/: README.md  __init__.py
css/: base.css  body.css  default.css  dialog.css  doc_column_view.css  forms.css  gh-buttons.css  menus.css  messages.css  tabs.css
css/Aristo/: Aristo.css  aristo.selected.css
css/bootstrap/: bootstrap-topbar.css  buttons.css  dropdown.css  headings.css  icons.css  navbar.css  popover.css  tooltip.css
css/legacy/: body.css  bootstrap-buttons.css  build.json  bw-icons.css  calendar.css  default.css  dialog.css  fields.css  forms.css  grid.css  jquery-ui.css  listing.css  messages.css  report.css  sidebar.css  tabs.css  user.css  wntoolbar.css
css/lib/: jquery.ui.css
css/ui/: buttons.css  container.css  filter.css  fonts.css  list.css  overlay.css  ribbons.css  status_bar.css  views.css
current/: index.html
current/api/: community_erpnext_com.__init__.html  community_erpnext_com.hooks.html  community_erpnext_com.migrate.html  frappe.__init__.html  frappe.__version__.html  frappe.api.html  frappe.app.html  frappe.async.html  frappe.auth.html  frappe.boot.html  frappe.build.html  frappe.celery_app.html  frappe.client.html  frappe.commands.html  frappe.database.html  frappe.defaults.html  (+18 more)
data/: Framework.sql
desk/: .prettierrc.json  index.html  jsconfig.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
docs/: Makefile  README  conf.py  core.doctype.control_panel.txt  core.doctype.doctype_mapper.txt  core.doctype.letter_head.txt  core.doctype.profile.txt  core.doctype.property_setter.txt  core.doctype.stylesheet.txt  core.doctype.txt  core.page.txt  core.txt  docs.attributions.md  docs.dev.framework.client.md  docs.dev.framework.md  docs.dev.framework.server.md  docs.dev.quickstart.md  docs.framework.client.md  docs.framework.md  generate_modules.py  modules.txt  webnotes.modules.txt  webnotes.txt  webnotes.utils.txt
esbuild/: build-cleanup.js  esbuild-watch.js  esbuild.js  frappe-html.js  frappe-vue-style.js  ignore-assets.js  index.js  sass_options.js  utils.js
frappe/: .pylintrc  .stylelintrc  README.md  __init__.py  __version__.py  _doctypes.py  api.py  app.py  apps.py  async.py  auth.py  authorizations.py  bench.py  bencher.py  boot.py  build.js  build.py  cache_manager.py  calendar_map.json  celery.py  celery_app.py  cli.py  client.py  commands.py  config.py  country_info.json  country_info.py  coverage.py  database.py  db.py  defaults.py  deferred_insert.py  deprecation_dumpster.py  doc_subscription.py  doctypes.py  exceptions.py  federation_client.py  federation_master.py  frappeclient.py  handler.py  (+34 more)
js/: app.js  build.json  core.js  core.min.js  form.compressed.js  globals.js  user.js  wnf.compressed.js
public/: app.html  build.json  lib  rss.xml
py/: common.py  tests.py  watch.py
realtime/: handlers.js  index.js  utils.js
rollup/: build.js  ckeditor.webpack.js  config.js  frappe-html-plugin.js  less-loader.js  rollup.utils.js  watch.js
templates/: base.html
test_sites/: apps.txt
user/: index.html
webnotes/: __init__.py  api.py  app.py  app_manager.py  auth.py  boot.py  build.py  cli.py  client.py  country_info.json  country_info.py  db.py  defaults.py  desktop.json  handler.py  hooks.txt  installer.py  manage.py  memc.py  middlewares.py  modules.txt  password_reset.txt  patches.txt  permissions.py  plugins.py  profile.py  pythonrc.py  session_cache.py  sessions.py  test_runner.py  translate.py  webutils.py  wnf.py
webpack/: utils.js  webpack.config.js
website/: __init__.py  sitemap.py
www/: blank.html  compress.py  index.cgi
(+10559 files in other folders)
