[project]
name = "frappe"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
description = "Metadata driven, full-stack low code web framework"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # core dependencies
    "Babel~=2.9.0",
    "Click~=7.1.2",
    "filelock~=3.8.0",
    "filetype~=1.2.0",
    "GitPython~=3.1.34",
    "Jinja2~=3.1.2",
    "Pillow~=10.3.0",
    "PyJWT~=2.4.0",
    # We depend on internal attributes,
    # do NOT add loose requirements on PyMySQL versions.
    "PyMySQL==1.1.1",
    "PyPDF2~=2.1.0",
    "PyPika==0.48.9",
    "PyQRCode~=1.2.1",
    "PyYAML~=6.0.1",
    "RestrictedPython~=6.2",
    "WeasyPrint==52.5",
    "Werkzeug~=2.3.8",
    "Whoosh~=2.7.4",
    "beautifulsoup4~=4.9.3",
    "bleach-allowlist~=1.0.3",
    "bleach~=3.3.0",
    "cairocffi==1.2.0",
    "chardet~=5.1.0",
    "croniter~=1.3.5",
    "cryptography~=42.0.0",
    "cssutils~=2.9.0",
    "email-reply-parser~=0.5.12",
    "git-url-parse~=1.2.2",
    "gitdb~=4.0.7",
    "gunicorn~=22.0.0",
    "html5lib~=1.1",
    "ipython~=8.10.0",
    "ldap3~=2.9",
    "markdown2~=2.4.0",
    "MarkupSafe>=2.1.0,<3",
    "maxminddb-geolite2==2018.703",
    "num2words~=0.5.10",
    "oauthlib~=3.2.1",
    "openpyxl~=3.0.7",
    "passlib~=1.7.4",
    "pdfkit~=1.0.0",
    "phonenumbers==8.12.40",
    "premailer~=3.8.0",
    "psutil~=5.9.1",
    "psycopg2-binary~=2.9.1",
    "pyasn1~=0.4.8",
    "pyOpenSSL~=24.0.0",
    "pycryptodome~=3.18.0",
    "pyotp~=2.6.0",
    "pypng~=0.20220715.0",
    "python-dateutil~=2.8.1",
    "pytz==2022.1",
    "rauth~=0.7.3",
    "redis~=3.5.3",
    "hiredis~=2.0.0",
    "requests-oauthlib~=1.3.0",
    "requests~=2.32.0",
    "rq~=1.14.1",
    "rsa>=4.1",
    "semantic-version~=2.10.0",
    "sqlparse~=0.5.0",
    "tenacity~=8.0.1",
    "terminaltables~=3.1.0",
    "traceback-with-variables~=2.0.4",
    "urllib3~=1.26.4",
    "xlrd~=2.0.1",
    "zxcvbn~=4.4.28",
    "markdownify~=0.11.2",

    # integration dependencies
    "boto3~=1.18.49",
    "dropbox~=11.36.2",
    "google-api-python-client~=2.2.0",
    "google-auth-httplib2~=0.1.0",
    "google-auth-oauthlib~=0.4.4",
    "google-auth~=1.29.0",
    "posthog~=3.0.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
coverage = "~=6.5.0"
Faker = "~=13.12.1"
pyngrok = "~=5.0.5"
unittest-xml-reporting = "~=3.0.4"
watchdog = "~=3.0.0"
hypothesis = "~=6.68.2"
freezegun = "~=1.2.2"
responses = "==0.23.1"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

